added new exercises

--- a/people_counter_app/index.html
+++ b/people_counter_app/index.html
@@ -9,6 +9,8 @@
         <!-- <script>
             document.getElementById("count-el").innerText = 5
         </script> -->
+        <!-- Create a INCREMENT button with the id="increment-btn" -->
+        <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <script src="index.js"></script>
     </body>
 </html>
