--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Scrimba.js</title>
 </head>
 <body>
-    <p>First Push</p>
+    <h1>First Push</h1>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi possimus explicabo velit facere exercitationem magni esse ab maxime reiciendis vero dolores in, debitis corporis non perspiciatis aut nam accusantium architecto.
+    </p>
 </body>
+
 </html>
